# AIChat

./: AGENTS.md  Cargo.toml  README.md  build.rs  manual_build.bat  tauri.conf.json
.github/workflows/: release-desktop.yml  release.yml
capabilities/: default.json
frontend/: index.html  package-lock.json  package.json  styles.css  tsconfig.json  vite.config.mjs
frontend/scripts/: prepare-dist.mjs
frontend/src/: api.js  api.ts  app-context.js  app-context.ts  app.js  app.ts  clipboard.js  clipboard.ts  composer.js  composer.ts  constants.js  constants.ts  dom.js  dom.ts  markdown.js  markdown.ts  message-utils.js  message-utils.ts  model-dropdown.js  model-dropdown.ts  provider-account-panels.js  provider-account-panels.ts  provider-controls.js  provider-controls.ts  provider-template-dropdown.ts  provider-templates.ts  render-controls.js  render-controls.ts  render-messages.js  render-messages.ts  render-model.js  render-model.ts  render-providers.js  render-providers.ts  render-session.js  render-session.ts  render.js  render.ts  resize.js  resize.ts  (+7 more)
frontend/styles/: base.css  chat.css  controls.css  layout.css  utilities.css
src/: main.rs
src/app/: events.rs  mod.rs  view.rs
src/app/commands/: account.rs  mod.rs  providers.rs  sessions.rs  window.rs
src/app/state/: auth.rs  catalog.rs  chat.rs  chat_pipeline.rs  mod.rs  providers.rs  sessions.rs  settings.rs
src/app/state/antigravity/: chat.rs  mod.rs  providers.rs
src/app/state/claude/: auth.rs  chat.rs  mod.rs  providers.rs
src/app/state/claudecode/: chat.rs  mod.rs  (+1 more)
src/domain/: antigravity.rs  catalog.rs  claude.rs  claudecode.rs  codex.rs  error.rs  messages.rs  mod.rs  providers.rs  sessions.rs  settings.rs
src/infra/: clipboard.rs  codex_credentials.rs  extractor.rs  mod.rs  openai.rs  paths.rs  storage.rs  update.rs
src/infra/antigravity/: auth.rs  catalog.rs  mod.rs  streaming.rs  usage.rs
src/infra/chatgpt/: catalog.rs  mod.rs  oauth.rs  streaming.rs  usage.rs
src/infra/claude/: catalog.rs  mod.rs
src/infra/claudecode/: catalog.rs  mod.rs  streaming.rs  usage.rs
(+4 files in other folders)
