[package]
name = "ai-chat"
version = "1.0.0"
edition = "2024"
description = "Desktop OpenAI-compatible chat client"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
futures-util = "0.3"
log = { version = "0.4", features = ["std"] }
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = "2"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "sync", "time", "process"] }
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_System_DataExchange", "Win32_System_Memory"] }

[build-dependencies]
tauri-build = "2"

[patch.crates-io]
typeid = { path = "vendor/typeid" }

[profile.release]
strip = true
lto = "thin"
