[package]
name = "ai-chat"
version = "1.10.2"
edition = "2024"
description = "Desktop OpenAI-compatible chat client"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
arboard = { version = "3.6.1", default-features = false }
base64 = "0.22.1"
chrono = { version = "0.4.45", features = ["serde"] }
dirs = "6.0.0"
futures-util = "0.3.32"
log = { version = "0.4.33", features = ["std"] }
rand = "0.10.1"
uuid = { version = "1.23.3", features = ["v4"] }
reqwest = { version = "0.13.4", default-features = false, features = ["form", "json", "multipart", "rustls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tauri = { version = "2.11.3", features = ["tray-icon"] }
notify-rust = "4"
tauri-plugin-notification = "2"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time", "process", "net", "io-util"] }
tokio-tungstenite = "0.29.0"
urlencoding = "2.1.3"
regex = "1.12.4"

[build-dependencies]
tauri-build = "2.6.3"

[patch.crates-io]
typeid = { path = "vendor/typeid" }

[profile.release]
strip = true
lto = "thin"
